--- a/index.html
+++ b/index.html
@@ -150,42 +150,51 @@
 
 							<div class="job">
 								<h2>Player Tracking - Soccer</h2>
-								<p>This is one of the most challenging tasks in computer vision I came across. In most games players wear very similar jerseys. And in games like soccer or basketball, it is really difficult to track a player of interest. I looked into many solutions that exist and understood it’s ideas, most of which are for crowd human tracking or vehicle tracking. And I am working on deriving appearance based embedding learning to differentiate between players. </p>
+								<p>This is one of the most challenging tasks in computer vision I came across. In most games players wear very similar jerseys. And in games like soccer or basketball, it is really difficult to track a player of interest. I looked into many solutions that exist and understood it’s ideas, most of which are for crowd human tracking or vehicle tracking. And I am working on deriving appearance based embedding learning to differentiate between players. 
+								</p>
+								<img src='static/images/PT1.gif' >
 							</div>
 
 							<div class="job">
 								<h2>Player Reid (clustering) - Soccer</h2>
 								<p>Player reid is yet another challenging task, where we want to cluster players from different teams and responsibility into separate categories. I explored different approaches and came to a conclusion that similarity matching can be a good strategy as players from one team appear similar. I used CNN and Triplet loss to make the model learn to detect players from the same teams and then used a clustering algorithm to group them. </p>
+								<img src='static/images/PT1.gif' >
 							</div>
 
 							<div class="job">
 								<h2>Spindle X</h2>
 								<p>Working with Xray images comes with an inbuilt challenge of data variation due to no standard rule to take pictures. With huge augmentation we wanted to detect each corner point in the spinal intervertebral discs. Because these fine points can be used to further measurements and make the diagnosis faster and better. </p>
+								<img src='static/images/xray1.gif' width='400'>
 							</div>
 
 							<div class="job">
 								<h2>Spindle MRI </h2>
 								<p>Worked on detecting disease at disk level in an MRI Image. So it was a multi-label multi-class problem. Used CNN to get underlying features to create a one vs all classifier. Detection of such disease needs very fine grained features, as it can be a difficult task even for human expertise. </p>
+								<img src='static/images/mri.png' width='300'>
 							</div>
 
 							<div class="job">
 								<h2>ANPR (automaic number plate recognition)</h2>
 								<p>Automatic Number Plate Recognition is one interesting challenge which can have many uses and at a large scale. Detection of the correct licence plate can be used for surveillance as well monitoring any potential traffic violations. Combining CNN and RNN to form RCNN was the key ingredient. Each row of the plate was passed a sequence  and it was able to predict what the potential characters could be even if the characters are not fully visible. </p>
+								<img src='static/images/anpr.gif' width='400'>
 							</div>
 
 							<div class="job">
 								<h2>Helmet Violation Detection </h2>
 								<p>Convolutional Detection  methods like YOLO, SSD come with computation cost. So I Converted this problem into classification. I used license plates position to estimate potential head location and did a three classification as if both rider and pillion is wearing a helmet or not or if the image is junk since we don’t want to make false predictions for people who are actually following traffic rules. Having this in mind I was able to get about 98% recall. </p>
+								<img src='static/images/hvd.gif' width='400'>
 							</div>
 
 							<div class="job">
 								<h2>Vehicle Classification </h2>
 								<p>Experimented many architechture and losses to fit the problem and challenges like data imbalances. Optimized models to run on CPU </p>
+								<img src='static/images/veh.gif' width='400'>
 							</div>
 
 							<div class="job">
 								<h2>Vehicle Detection </h2>
 								<p>Experimented with different detection techniques - Two Stage(RCNN) and Single shot(YOLO, SSD), got resonable map on detecions of different vehicles. </p>
+								<img src='static/images/veh.gif' width='400'>
 							</div>
 
 							<div class="job last">
