--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								I am passionate about computer programming, having keen interest in computer vision specially. I am well experienced in both ceonventional and advanced deep learning techniques. I enjoy working and learning computer vision to solve challenging problems which in ways improves lives.
+								I am passionate about computer programming, having keen interest in computer vision
+								specifically. I have been working on CV for the past 6 years and I think this is one of the technologies which is very futuristic and has a large scale impact and diversity of
+								applications. I am currently working at Stats Perform as an AI Scientist, mentoring a
+								team in India on CV projects.
 						</div>
 					</div><!--// .yui-gf -->
 
@@ -71,32 +74,7 @@
 							</div>
 						</div>
 					</div><!--// .yui-gf -->
-
 					</div>
-
-					<div class="yui-gf">
-
-						<div class="yui-u first">
-							<h2>Skills</h2>
-						</div>
-						<div class="yui-u">
-
-								<div class="talent">
-									<h2>Computer Vision</h2>
-									<p>Well experienced with conventional and deep learninig techniques to computer vision.	</p>
-								</div>
-
-								<div class="talent">
-									<h2>Python</h2>
-									<p>Profient in python, also know c, C++. Have worked with Pytorch, Keras, Yolo and other deep learning frameworks.	 </p>
-								</div>
-
-								<div class="talent">
-									<h2>Project Direction</h2>
-									<p>Proven ability to lead and manage a wide variety of design and development of vision projects in team and independent situations.</p>
-								</div>
-						</div>
-					</div><!--// .yui-gf -->
 
 					<div class="yui-gf">
 	
@@ -110,22 +88,28 @@
 								<h2>Stats Perform</h2>
 								<h3>AI Scientist</h3>
 								<h4>2021-current</h4>
-								<p>Working on game domain to get in insights of a match using CNN. Worked on soccer games for players team clustering and tracking. 
-								Leading a small team of smart people working on computer vision. </p>
+								<p>Working on developing AI models for live game analysis. Working with
+									Players are challenging as all players wear similar jerseys and thus extracting individual players information becomes difficult. </p>
 							</div>
 
 							<div class="job">
 								<h2>Synapsica Technologies</h2>
 								<h3>AI Scientist</h3>
 								<h4>2019-2021</h4>
-								<p>Worked on Xray and MRI Images to get underlying features using CNN to detect anamolies in spine. </p>
+								<p>Worked on MRI-scans to detect multi-label, multi-class disease on intervertebral spinal
+									discs, extracting underlying features through CNN. Got familiarity with medical data
+									format and working principles. My role involved doing RnD for product, developing
+									neural architecture, training model, optimizing model, deployment and mentoring team. </p>
 							</div>
 
 							<div class="job">
 								<h2>Graymatics</h2>
 								<h3>AI Engineer</h3>
 								<h4>2018-2019</h4>
-								<p> Developed Automatics Number Plate Recognition System. Combining CNN with RNN made it possible to get best results on OCR. </p>
+								<p> As an Engineer at Graymatics, I enjoyed working and exploring the way CNN’s can be
+									tweaked to achieve desired goals. Learned Python frameworks like Tensorflow and
+									Keras. During my work I developed an end to end ANPR system with a reasonable
+									accuracy for CCTV cameras. </p>
 							</div>
 
 
@@ -133,8 +117,11 @@
 								<h2>Vehant Technologies</h2>
 								<h3>Software Development Engineer</h3>
 								<h4>2014-20018</h4>
-								<p>Started working on software development and then moved to computer vision. Got the opportunity to explore and exprement deep learning 
-									concepts.</p>
+								<p>Working in Vehant was a great combination of learning and contributing to the
+									organization. Got the opportunity to explore Deep Learning and apply it to solve
+									existing problems. As a part of the development team managed backend processing,
+									integrating sensors to the system, developing and optimizing caffe and yolo models.
+								</p>
 							</div>
 
 						</div><!--// .yui-u -->
@@ -186,14 +173,9 @@
 							</div>
 
 							<div class="job">
-								<h2>Vehicle Classification </h2>
-								<p>Experimented many architechture and losses to fit the problem and challenges like data imbalances. Optimized models to run on CPU </p>
-								<img src='static/images/veh.gif' width='400'>
-							</div>
-
-							<div class="job">
-								<h2>Vehicle Detection </h2>
-								<p>Experimented with different detection techniques - Two Stage(RCNN) and Single shot(YOLO, SSD), got resonable map on detecions of different vehicles. </p>
+								<h2>Vehicle Detection & Classification </h2>
+								<p>Due to high computation cost, using convolutional
+									detectors was not an option, but with the information of the plate we could make estimate about the vehicle presence and whereabout, did a classification and optimized it to run on intel machine at real time. </p>
 								<img src='static/images/veh.gif' width='400'>
 							</div>
 
